# Alfabet-IA-Rural---Etnografia-Aumentada-por-IA

./: .env.example  .gitignore  README.md  README_DEPLOY.md  deploy.sh  docker-compose.yml
Arquitectura-Multiagente-AlfabetIA/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  rutas_generadas.md
Arquitectura-Multiagente-AlfabetIA/data/: codebook_seed.yaml  l0_curriculum.yaml  policies_seed.yaml
Arquitectura-Multiagente-AlfabetIA/docs/: ARQUITECTURA.md  AUDITORIA_ARQUITECTONICA.md  CODEBOOK_Y_CURRICULUM.md  DECISIONES_TECNOLOGICAS.md  MODELO_MENTAL_Y_AGRUPAMIENTO.md  OLLAMA_LOCAL.md  PROMPT_IMPLEMENTACION.md  ROADMAP_IMPLEMENTACION.md  SEGURIDAD_GOBERNANZA.md  VALIDACION_RIGUROSA.md  casos_prueba_auditoria.md
Arquitectura-Multiagente-AlfabetIA/src/alfabetia_rural/: __init__.py  bootstrap.py  cli.py  config.py
Arquitectura-Multiagente-AlfabetIA/src/alfabetia_rural/agents/: __init__.py  acode.py  aethno.py  aexpl.py  afair.py  agov.py  aing.py  amind.py  aplan.py  asup.py  async_sync.py  base.py
Arquitectura-Multiagente-AlfabetIA/src/alfabetia_rural/api/: app.py
Arquitectura-Multiagente-AlfabetIA/src/alfabetia_rural/domain/: __init__.py  enums.py  models.py  observability.py
Arquitectura-Multiagente-AlfabetIA/src/alfabetia_rural/llm/: __init__.py  base.py  cloud_client.py  factory.py  langchain_ollama_adapter.py  ollama_client.py  stub.py
Arquitectura-Multiagente-AlfabetIA/src/alfabetia_rural/services/: cold_start.py  grouping.py  observability.py  orchestrator.py  segmentation.py
Arquitectura-Multiagente-AlfabetIA/src/alfabetia_rural/storage/: __init__.py  crypto.py  sqlite_store.py
Arquitectura-Multiagente-AlfabetIA/src/alfabetia_rural/utils/: graphs.py  hashing.py  loaders.py  serializers.py
Arquitectura-Multiagente-AlfabetIA/tests/: conftest.py  test_consent.py  test_ethnographic_chat.py  test_ethnographic_chat_routes.py  test_grouping.py  test_orchestrator.py  test_planner.py  test_regional_codes.py  test_revocation_audit.py  test_security_audit.py  test_segment_recalculation.py
fronted-alfabetia/: Dockerfile  (+5 more)
(+19 files in other folders)
