[build-system]
requires = ["setuptools>=80.9", "wheel>=0.45"]
build-backend = "setuptools.build_meta"

[project]
name = "AlfabetIA-rural"
version = "0.3.0"
description = "AlfabetIA Rural: arquitectura Python offline-first, human-in-the-loop y LLM-local con Ollama"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "AlfabetIA Rural Engineering Committee"}]
license = {text = "MIT"}
keywords = ["offline-first", "human-in-the-loop", "ollama", "rural-ai-literacy", "multiagent", "audit"]
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = [
  "fastapi>=0.136.0,<0.137.0",
  "uvicorn>=0.44.0,<0.45.0",
  "pydantic>=2.12.0,<3.0.0",
  "pydantic-settings>=2.13.1,<3.0.0",
  "typer>=0.24.1,<0.25.0",
  "httpx>=0.28.1,<0.29.0",
  "PyYAML>=6.0.3,<7.0.0",
  "networkx>=3.6.1,<4.0.0",
  "cryptography>=46.0.7,<47.0.0",
]

[project.optional-dependencies]
# El núcleo NO depende de LangChain/LangGraph. Estos paquetes quedan como adaptadores
# periféricos para pruebas de structured output y laboratorios de orquestación.
ollama = [
  "ollama>=0.6.1,<0.7.0",
  "langchain>=1.2.15,<2.0.0",
  "langgraph>=1.1.8,<2.0.0",
  "langchain-ollama>=1.1.0,<2.0.0",
]
dev = [
  "pytest>=9.0.3,<10.0.0",
  "ruff>=0.15.11,<0.16.0",
  "mypy>=1.20.1,<2.0.0",
]

[project.scripts]
alfabetia = "alfabetia_rural.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"
